--- a/app/index.html
+++ b/app/index.html
@@ -1,14 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+
+  <!-- Meta -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+  <!-- Styles -->
+  <link rel="stylesheet" href="./css/reset.min.css">
   <link rel="stylesheet" href="./css/app.min.css">
+
+  <!-- Title -->
   <title>Document</title>
+
 </head>
+
 <body>
-  <div class="test">test</div>
+
+  <div class="wrapper">
+
+    <!-- //*Header* -->
+    <header data-vide-bg="./video/videoframe">
+
+      <nav>
+        <div class="logo">
+          <img src="" alt="">
+        </div>
+
+        <a href="" class="link">ссылка1</a>
+        <a href="" class="link">ссылка2</a>
+        <a href="" class="link">ссылка3</a>
+        <a href="" class="link">ссылка4</a>
+        <a href="" class="link">ссылка5</a>
+      </nav>
+
+    </header>
+    <!-- //*Header*// -->
+
+    <!-- //*Main* -->
+    <main>
+      <div class="test">
+        <h1>fkeprfkeofkpe</h1>
+      </div>
+    </main>
+    <!-- //*Main*// -->
+
+    <!-- //*Footer* -->
+    <footer>
+
+    </footer>
+    <!-- //*Footer*// -->
+
+  </div>
+
+  <script src="./js/app.min.js"></script>
+
 </body>
+
 </html>
