--- a/app/index.html
+++ b/app/index.html
@@ -29,21 +29,31 @@
           <img src="" alt="">
         </div>
 
-        <a href="" class="link">ссылка1</a>
-        <a href="" class="link">ссылка2</a>
-        <a href="" class="link">ссылка3</a>
-        <a href="" class="link">ссылка4</a>
-        <a href="" class="link">ссылка5</a>
+        <a href="" class="link">Проекты</a>
+        <a href="" class="link">Галерея</a>
+        <a href="" class="link">О Нас</a>
+        <a href="" class="link">Контакты</a>
       </nav>
 
+      <!-- <section class="block2">
+        <h1>Строительство домов из газобетона <br> в Санкт-Петербурге</h1>
+      </section> -->
     </header>
     <!-- //*Header*// -->
 
     <!-- //*Main* -->
     <main>
-      <div class="test">
-        <h1>fkeprfkeofkpe</h1>
-      </div>
+      <section class="block1">
+        <h1>Проектируем дома от 200р/м2 + подробная смета на строительство дома в подарок. </h1>
+      </section>
+
+      <section class="block2">
+        <h1>Прописываем в договоре конкретные <br>сроки и фиксированную стоимость. <br>Иначе выплатим Вам штраф!</h1>
+      </section>
+
+      <section class="block1">
+        <h1>Проекты</h1>
+      </section>
     </main>
     <!-- //*Main*// -->
 
