--- a/app/index.html
+++ b/app/index.html
@@ -26,25 +26,56 @@
 
       <nav>
         <div class="logo">
-          <img src="" alt="">
+          <!-- <img src="" alt=""> -->
+          <i class="fas fa-home"></i>
         </div>
 
-        <a href="" class="link">Проекты</a>
-        <a href="" class="link">Галерея</a>
-        <a href="" class="link">О Нас</a>
-        <a href="" class="link">Контакты</a>
+        <div class="links">
+          <a href="" class="link">Проекты</a>
+          <a href="" class="link">Галерея</a>
+          <a href="" class="link">О Нас</a>
+          <a href="" class="link">Контакты</a>
+        </div>
+
+        <div class="phone">
+          <a href="tel:+88121234567" class="">8 (812) 123-4567</a>
+          <a href="tel:+88121234567" class="phonelink"><i class="fas fa-phone"></i></a>
+          <a href="https://wa.me/88121234567" class="whatsapp"><i class="fab fa-whatsapp"></i></a>
+        </div>
+
       </nav>
 
-      <!-- <section class="block2">
-        <h1>Строительство домов из газобетона <br> в Санкт-Петербурге</h1>
-      </section> -->
+      <h1 class="headline">Строительство домов из газобетона <br> в Санкт-Петербурге</h1>
+
+      <div class="advantage">
+        <div class="advantage-item">
+          <i class="fas fa-home"></i>
+          <p>Более 13 лет опыта<br> работы в сфере<br> строительства и ремонтов</p>
+        </div>
+
+        <div class="advantage-item">
+          <i class="fas fa-tools"></i>
+          <p>Профессиональное<br> оборудование <br>и инструмент</p>
+        </div>
+
+        <div class="advantage-item">
+          <i class="fas fa-shield-alt"></i>
+          <p>Гарантия 2 года<br> на все<br> производимые работы</p>
+        </div>
+
+        <div class="advantage-item">
+          <i class="fas fa-ruble-sign"></i>
+          <p>Фиксированная<br> стоимость<br> работ</p>
+        </div>
+      </div>
+
     </header>
     <!-- //*Header*// -->
 
     <!-- //*Main* -->
     <main>
       <section class="block1">
-        <h1>Проектируем дома от 200р/м2 + подробная смета на строительство дома в подарок. </h1>
+        <h1>Проектируем дома от 200р/м2 + подробная смета на строительство дома в подарок.</h1>
       </section>
 
       <section class="block2">
@@ -53,6 +84,109 @@
 
       <section class="block1">
         <h1>Проекты</h1>
+        <div class="projects">
+          <div class="project">
+            <div class="project-image">
+              <img src="./images/dom.jpg" alt="">
+            </div>
+            <div class="project-title">
+              <h2>Forenta</h2>
+            </div>
+            <div class="project-info">
+              <li><span class="bold">Внутренняя площадь:</span>75м2</li>
+              <li><span class="bold">Внешняя площадь:</span>75м<sup>2</sup></li>
+              <li><span class="bold">Этажность:</span>1 этаж</li>
+            </div>
+            <div class="project-order">
+              <button>Заказать</button>
+            </div>
+          </div>
+
+          <div class="project">
+            <div class="project-image">
+              <img src="./images/dom.jpg" alt="">
+            </div>
+            <div class="project-title">
+              <h2>Forenta</h2>
+            </div>
+            <div class="project-info">
+              <li><span class="bold">Внутренняя площадь:</span>75м2</li>
+              <li><span class="bold">Внешняя площадь:</span>75м<sup>2</sup></li>
+              <li><span class="bold">Этажность:</span>1 этаж</li>
+            </div>
+            <div class="project-order">
+              <button>Заказать</button>
+            </div>
+          </div>
+
+          <div class="project">
+            <div class="project-image">
+              <img src="./images/dom.jpg" alt="">
+            </div>
+            <div class="project-title">
+              <h2>Forenta</h2>
+            </div>
+            <div class="project-info">
+              <li><span class="bold">Внутренняя площадь:</span>75м2</li>
+              <li><span class="bold">Внешняя площадь:</span>75м<sup>2</sup></li>
+              <li><span class="bold">Этажность:</span>1 этаж</li>
+            </div>
+            <div class="project-order">
+              <button>Заказать</button>
+            </div>
+          </div>
+
+          <div class="project">
+            <div class="project-image">
+              <img src="./images/dom.jpg" alt="">
+            </div>
+            <div class="project-title">
+              <h2>Forenta</h2>
+            </div>
+            <div class="project-info">
+              <li><span class="bold">Внутренняя площадь:</span>75м2</li>
+              <li><span class="bold">Внешняя площадь:</span>75м<sup>2</sup></li>
+              <li><span class="bold">Этажность:</span>1 этаж</li>
+            </div>
+            <div class="project-order">
+              <button>Заказать</button>
+            </div>
+          </div>
+
+          <div class="project">
+            <div class="project-image">
+              <img src="./images/dom.jpg" alt="">
+            </div>
+            <div class="project-title">
+              <h2>Forenta</h2>
+            </div>
+            <div class="project-info">
+              <li><span class="bold">Внутренняя площадь:</span>75м2</li>
+              <li><span class="bold">Внешняя площадь:</span>75м<sup>2</sup></li>
+              <li><span class="bold">Этажность:</span>1 этаж</li>
+            </div>
+            <div class="project-order">
+              <button>Заказать</button>
+            </div>
+          </div>
+
+          <div class="project">
+            <div class="project-image">
+              <img src="./images/dom.jpg" alt="">
+            </div>
+            <div class="project-title">
+              <h2>Forenta</h2>
+            </div>
+            <div class="project-info">
+              <li><span class="bold">Внутренняя площадь:</span>75м2</li>
+              <li><span class="bold">Внешняя площадь:</span>75м<sup>2</sup></li>
+              <li><span class="bold">Этажность:</span>1 этаж</li>
+            </div>
+            <div class="project-order">
+              <button>Заказать</button>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <!-- //*Main*// -->
