--- a/app/index.html
+++ b/app/index.html
@@ -41,6 +41,7 @@
           <a href="tel:+88121234567" class="">8 (812) 123-4567</a>
           <a href="tel:+88121234567" class="phonelink"><i class="fas fa-phone"></i></a>
           <a href="https://wa.me/88121234567" class="whatsapp"><i class="fab fa-whatsapp"></i></a>
+          <a href="mailto:test@test.ru" class="whatsapp"><i class="fas fa-envelope"></i></i></a>
         </div>
 
       </nav>
@@ -187,6 +188,16 @@
             </div>
           </div>
         </div>
+      </section>
+
+      <section id="gallery" class="gallery1" style="display:none;">
+        <img alt="Image 1 Title" src="images/gallery/thumbs/image1.jpg"
+        data-image="images/gallery/image1.jpg"
+        data-description="Image 1 Description">
+
+        <img alt="Image 2 Title" src="images/gallery/thumbs/image2.jpg"
+        data-image="images/gallery/image2.jpg"
+        data-description="Image 2 Description">
       </section>
     </main>
     <!-- //*Main*// -->
