--- a/app/index.html
+++ b/app/index.html
@@ -41,7 +41,7 @@
           <a href="tel:+88121234567" class="">8 (812) 123-4567</a>
           <a href="tel:+88121234567" class="phonelink"><i class="fas fa-phone"></i></a>
           <a href="https://wa.me/88121234567" class="whatsapp"><i class="fab fa-whatsapp"></i></a>
-          <a href="mailto:test@test.ru" class="whatsapp"><i class="fas fa-envelope"></i></i></a>
+          <a href="mailto:test@test.ru" class="whatsapp"><i class="fas fa-envelope"></i></a>
         </div>
 
       </nav>
@@ -76,22 +76,23 @@
     <!-- //*Main* -->
     <main>
       <section class="block1">
-        <h1>Проектируем дома от 200р/м2 + подробная смета на строительство дома в подарок.</h1>
+        <h2>Проектируем дома от 200р/м2 + подробная смета на строительство дома в подарок.</h2>
       </section>
 
       <section class="block2">
-        <h1>Прописываем в договоре конкретные <br>сроки и фиксированную стоимость. <br>Иначе выплатим Вам штраф!</h1>
+        <h2>Прописываем в договоре конкретные <br>сроки и фиксированную стоимость. <br>Иначе выплатим Вам штраф!</h2>
       </section>
 
-      <section class="block1">
-        <h1>Проекты</h1>
+      <section class="block3">
+        <h2 class="sectionTitle">Проекты</h2>
         <div class="projects">
+
           <div class="project">
             <div class="project-image">
               <img src="./images/dom.jpg" alt="">
             </div>
             <div class="project-title">
-              <h2>Forenta</h2>
+              <h3>Forenta</h3>
             </div>
             <div class="project-info">
               <li><span class="bold">Внутренняя площадь:</span>75м2</li>
@@ -108,7 +109,7 @@
               <img src="./images/dom.jpg" alt="">
             </div>
             <div class="project-title">
-              <h2>Forenta</h2>
+              <h3>Forenta</h3>
             </div>
             <div class="project-info">
               <li><span class="bold">Внутренняя площадь:</span>75м2</li>
@@ -125,7 +126,7 @@
               <img src="./images/dom.jpg" alt="">
             </div>
             <div class="project-title">
-              <h2>Forenta</h2>
+              <h3>Forenta</h3>
             </div>
             <div class="project-info">
               <li><span class="bold">Внутренняя площадь:</span>75м2</li>
@@ -142,7 +143,7 @@
               <img src="./images/dom.jpg" alt="">
             </div>
             <div class="project-title">
-              <h2>Forenta</h2>
+              <h3>Forenta</h3>
             </div>
             <div class="project-info">
               <li><span class="bold">Внутренняя площадь:</span>75м2</li>
@@ -159,7 +160,7 @@
               <img src="./images/dom.jpg" alt="">
             </div>
             <div class="project-title">
-              <h2>Forenta</h2>
+              <h3>Forenta</h3>
             </div>
             <div class="project-info">
               <li><span class="bold">Внутренняя площадь:</span>75м2</li>
@@ -176,7 +177,7 @@
               <img src="./images/dom.jpg" alt="">
             </div>
             <div class="project-title">
-              <h2>Forenta</h2>
+              <h3>Forenta</h3>
             </div>
             <div class="project-info">
               <li><span class="bold">Внутренняя площадь:</span>75м2</li>
@@ -190,15 +191,65 @@
         </div>
       </section>
 
-      <section id="gallery" class="gallery1" style="display:none;">
-        <img alt="Image 1 Title" src="images/gallery/thumbs/image1.jpg"
-        data-image="images/gallery/image1.jpg"
-        data-description="Image 1 Description">
-
-        <img alt="Image 2 Title" src="images/gallery/thumbs/image2.jpg"
-        data-image="images/gallery/image2.jpg"
-        data-description="Image 2 Description">
+      <section class="gallery">
+        <h2 class="sectionTitle">Наши работы</h2>
+        <div class="images">
+          <img alt="" src="images/gallery/image1.jpg">
+          <img alt="" src="images/gallery/image2.jpg">
+          <img alt="" src="images/gallery/image3.jpg">
+        </div>
       </section>
+
+      <section class="about">
+        <h2 class="sectionTitle">О Нас</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis maiores itaque, sit soluta distinctio porro fugiat facilis ullam delectus ipsam quis nisi, eos in ratione neque, inventore repudiandae eius pariatur quos recusandae molestiae nulla at incidunt! Laborum vitae voluptas sit fugiat eaque, porro aspernatur pariatur ratione distinctio culpa reprehenderit nam quae eligendi officia ipsam consequatur quasi corporis nihil quia sequi. Voluptas, numquam sunt odit cum. Qui harum alias minima laudantium dolor numquam ratione, aliquid reprehenderit voluptatum totam, doloremque quaerat consequatur, atque eos delectus. Voluptatem labore sint nam beatae odit doloremque a soluta voluptas, aliquam doloribus explicabo distinctio id nobis aliquid nesciunt adipisci saepe obcaecati. Doloribus cupiditate sed culpa perferendis! Perferendis, natus amet doloremque expedita hic qui rerum dolorem tempora! Nisi suscipit commodi, quia harum obcaecati similique eaque autem sequi dolorem nemo id, a ipsam blanditiis! Excepturi incidunt optio maiores, sed est labore. Officia incidunt possimus pariatur ab aspernatur optio consectetur nemo voluptas omnis laborum iusto numquam facilis quos adipisci, ducimus repellat nostrum. Beatae maiores, esse nulla omnis, quos nobis harum nihil reiciendis placeat, quidem excepturi sit ea eligendi in distinctio eius iste cupiditate. Incidunt corporis numquam amet fugiat natus a id, dignissimos sed impedit consequatur. Exercitationem ut quidem soluta dolor.</p>
+      </section>
+
+      <div class="message">
+        <form action="mail.php" id="message" class="message-form">
+          <input type="text" name="" value="" placeholder="Ваше Имя">
+          <input type="text" name="" value="" placeholder="Ваш e-mail">
+          <textarea name="name" rows="8" cols="80" placeholder="Введите сообщение"></textarea>
+          <button type="button" name="button">Отправить</button>
+        </form>
+      </div>
+
+      <section class="contacts">
+        <h2 class="sectionTitle">Контакты</h2>
+
+        <div class="contacts-wrapper">
+
+          <div class="contacts-links">
+
+            <div class="contacts-item contacts-phone">
+              <i class="fas fa-phone"></i>
+              <a href="tel:+88121234567" class="contacts-link">8 (812) 123-4567</a>
+            </div>
+
+            <div class="contacts-item contacts-email">
+              <i class="fas fa-envelope"></i>
+              <a href="mailto:test@test.ru" class="contacts-link">test@test.ru</a>
+            </div>
+
+            <div class="contacts-item contacts-messenger">
+              <i class="fab fa-whatsapp"></i>
+              <a href="https://wa.me/88121234567" class="contacts-link">Whatsapp</a>
+            </div>
+
+            <div class="contacts-item contacts-adress">
+              <i class="fas fa-map-marker-alt"></i>
+              <span class="contacts-link">СПб, Тестовая улица, дом 64, кор. 1</span>
+            </div>
+          </div>
+
+          <div class="map">
+            <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A6ac676f361eb22922cf415d3e39003d0b194b7f3536a1bf523e3811d4cbeecb6&amp;source=constructor" width="100%" height="240px" min-height="240px" frameborder="0"></iframe>
+          </div>
+        </div>
+
+      </section>
+
+
     </main>
     <!-- //*Main*// -->
 
