--- a/app/index.html
+++ b/app/index.html
@@ -31,10 +31,10 @@
         </div>
 
         <div class="links">
-          <a href="" class="link">Проекты</a>
-          <a href="" class="link">Галерея</a>
-          <a href="" class="link">О Нас</a>
-          <a href="" class="link">Контакты</a>
+          <a href="#sectionProjects" class="link">Проекты</a>
+          <a href="#sectionGallery" class="link">Галерея</a>
+          <a href="#sectionAbout" class="link">О Нас</a>
+          <a href="#sectionContacts" class="link">Контакты</a>
         </div>
 
         <div class="phone">
@@ -83,7 +83,7 @@
         <h2>Прописываем в договоре конкретные <br>сроки и фиксированную стоимость. <br>Иначе выплатим Вам штраф!</h2>
       </section>
 
-      <section class="block3">
+      <section id="sectionProjects" class="block3">
         <h2 class="sectionTitle">Проекты</h2>
         <div class="projects">
 
@@ -191,7 +191,7 @@
         </div>
       </section>
 
-      <section class="gallery">
+      <section id="sectionGallery" class="gallery">
         <h2 class="sectionTitle">Наши работы</h2>
         <div class="images">
           <img alt="" src="images/gallery/image1.jpg">
@@ -200,12 +200,14 @@
         </div>
       </section>
 
-      <section class="about">
+      <section id="sectionAbout"class="about">
         <h2 class="sectionTitle">О Нас</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis maiores itaque, sit soluta distinctio porro fugiat facilis ullam delectus ipsam quis nisi, eos in ratione neque, inventore repudiandae eius pariatur quos recusandae molestiae nulla at incidunt! Laborum vitae voluptas sit fugiat eaque, porro aspernatur pariatur ratione distinctio culpa reprehenderit nam quae eligendi officia ipsam consequatur quasi corporis nihil quia sequi. Voluptas, numquam sunt odit cum. Qui harum alias minima laudantium dolor numquam ratione, aliquid reprehenderit voluptatum totam, doloremque quaerat consequatur, atque eos delectus. Voluptatem labore sint nam beatae odit doloremque a soluta voluptas, aliquam doloribus explicabo distinctio id nobis aliquid nesciunt adipisci saepe obcaecati. Doloribus cupiditate sed culpa perferendis! Perferendis, natus amet doloremque expedita hic qui rerum dolorem tempora! Nisi suscipit commodi, quia harum obcaecati similique eaque autem sequi dolorem nemo id, a ipsam blanditiis! Excepturi incidunt optio maiores, sed est labore. Officia incidunt possimus pariatur ab aspernatur optio consectetur nemo voluptas omnis laborum iusto numquam facilis quos adipisci, ducimus repellat nostrum. Beatae maiores, esse nulla omnis, quos nobis harum nihil reiciendis placeat, quidem excepturi sit ea eligendi in distinctio eius iste cupiditate. Incidunt corporis numquam amet fugiat natus a id, dignissimos sed impedit consequatur. Exercitationem ut quidem soluta dolor.</p>
       </section>
 
       <div class="message">
+        <h2 class="sectionTitle">Напишите нам</h2>
+
         <form action="mail.php" id="message" class="message-form">
           <input type="text" name="" value="" placeholder="Ваше Имя">
           <input type="text" name="" value="" placeholder="Ваш e-mail">
@@ -214,7 +216,7 @@
         </form>
       </div>
 
-      <section class="contacts">
+      <section id="sectionContacts" class="contacts">
         <h2 class="sectionTitle">Контакты</h2>
 
         <div class="contacts-wrapper">
@@ -260,7 +262,7 @@
     <!-- //*Footer*// -->
 
   </div>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js" integrity="sha512-HaoDYc3PGduguBWOSToNc0AWGHBi2Y432Ssp3wNIdlOzrunCtB2qq6FrhtPbo+PlbvRbyi86dr5VQx61eg/daQ==" crossorigin="anonymous"></script>
   <script src="./js/app.min.js"></script>
 
 </body>
