--- a/app/index.html
+++ b/app/index.html
@@ -22,9 +22,9 @@
   <div class="wrapper">
 
     <!-- //*Header* -->
-    <header data-vide-bg="./video/videoframe">
+    <header id="header" data-vide-bg="./video/videoframe">
 
-      <nav>
+      <nav id="nav" class="">
         <div class="logo">
           <!-- <img src="" alt=""> -->
           <i class="fas fa-home"></i>
