--- a/app/index.html
+++ b/app/index.html
@@ -76,7 +76,8 @@
     <!-- //*Main* -->
     <main>
       <section class="block1">
-        <h2>Проектируем дома от 200р/м2 + подробная смета на строительство дома в подарок.</h2>
+        <!-- <p>Проектируем дома от 200р/м2 + подробная смета на строительство дома в подарок.</p> -->
+        <p>Проектируем дома от 200р за м2 + подробная <span class="gold">смета</span> на строительство дома <span class="gold">в подарок</span>.</p>
       </section>
 
       <section class="block2">
