--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,7 @@
 
         <div class="contact-links">
           <a href="tel:+88121234567" class="phonenumber">8 (812) 123-4567</a>
-          <a href="tel:+88121234567" class="phonelink"><i class="fas fa-phone"></i></a>
+          <a href="tel:+88121234567" id="callToMe" class="phonelink"><i class="fas fa-phone"></i></a>
           <a href="https://wa.me/88121234567" class="whatsapp"><i class="fab fa-whatsapp"></i></a>
           <a href="mailto:test@test.ru" class="whatsapp"><i class="fas fa-envelope"></i></a>
         </div>
@@ -84,44 +84,47 @@
 
   <!-- //*Header*// -->
 
-    <section class="profession">
-      <div class="container profession-container">
-        <div class="profession-text">
-          <h3 class="">Строительство домов из газобетона в Санкт-Петербурге</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est neque facilis, odit minima aperiam voluptatibus nisi necessitatibus, dolore placeat fugiat dolorem explicabo quam sapiente qui. Laborum culpa quibusdam nemo sapiente, eum, eligendi nam dolores debitis totam. Numquam repellat, iure, sapiente, impedit odit culpa, atque deserunt vitae porro recusandae esse reiciendis reprehenderit aperiam neque ullam qui corporis eius perferendis unde sunt tempore laudantium quibusdam quia! Facilis doloribus magnam ex quos recusandae, quis inventore!</p>
-          <!-- <p>Проектируем дома от 200р за м2 + подробная <span class="gold">смета</span> на строительство дома <span class="gold">в подарок</span>.</p> -->
+  <section class="profession">
+    <div class="container profession-container">
+      <div class="profession-text">
+        <h3 class="">Строительство домов из газобетона в Санкт-Петербурге</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est neque facilis, odit minima aperiam voluptatibus nisi necessitatibus, dolore placeat fugiat dolorem explicabo quam sapiente qui. Laborum culpa quibusdam nemo sapiente, eum,
+          eligendi nam dolores debitis totam. Numquam repellat, iure, sapiente, impedit odit culpa, atque deserunt vitae porro recusandae esse reiciendis reprehenderit aperiam neque ullam qui corporis eius perferendis unde sunt tempore laudantium
+          quibusdam quia! Facilis doloribus magnam ex quos recusandae, quis inventore!</p>
+        <!-- <p>Проектируем дома от 200р за м2 + подробная <span class="gold">смета</span> на строительство дома <span class="gold">в подарок</span>.</p> -->
+      </div>
+      <div class="advantage">
+        <div class="advantage-item">
+          <i class="fas fa-home"></i>
+          <p>Более 13 лет опыта<br> работы в сфере<br> строительства и ремонтов</p>
         </div>
-        <div class="advantage">
-          <div class="advantage-item">
-            <i class="fas fa-home"></i>
-            <p>Более 13 лет опыта<br> работы в сфере<br> строительства и ремонтов</p>
-          </div>
 
-          <div class="advantage-item">
-            <i class="fas fa-tools"></i>
-            <p>Профессиональное<br> оборудование <br>и инструмент</p>
-          </div>
+        <div class="advantage-item">
+          <i class="fas fa-tools"></i>
+          <p>Профессиональное<br> оборудование <br>и инструмент</p>
+        </div>
 
-          <div class="advantage-item">
-            <i class="fas fa-shield-alt"></i>
-            <p>Гарантия 2 года<br> на все<br> производимые работы</p>
-          </div>
+        <div class="advantage-item">
+          <i class="fas fa-shield-alt"></i>
+          <p>Гарантия 2 года<br> на все<br> производимые работы</p>
+        </div>
 
-          <div class="advantage-item">
-            <i class="fas fa-ruble-sign"></i>
-            <p>Фиксированная<br> стоимость<br> работ</p>
-          </div>
+        <div class="advantage-item">
+          <i class="fas fa-ruble-sign"></i>
+          <p>Фиксированная<br> стоимость<br> работ</p>
         </div>
       </div>
-      <!-- <p>Проектируем дома от 200р/м2 + подробная смета на строительство дома в подарок.</p> -->
+    </div>
+    <!-- <p>Проектируем дома от 200р/м2 + подробная смета на строительство дома в подарок.</p> -->
 
-    </section>
+  </section>
 
-    <section class="block2">
-      <h2>Прописываем в договоре конкретные <br>сроки и фиксированную стоимость. <br>Иначе выплатим Вам штраф!</h2>
-    </section>
+  <section class="block2">
+    <h2>Прописываем в договоре конкретные <br>сроки и фиксированную стоимость. <br>Иначе выплатим Вам штраф!</h2>
+  </section>
 
-    <section id="sectionProjects" class="block3">
+  <section id="sectionProjects" class="block3">
+    <div class="container">
       <h2 class="sectionTitle">Проекты</h2>
       <div class="projects">
 
@@ -138,7 +141,7 @@
             <li><span class="bold">Этажность:</span>1 этаж</li>
           </div>
           <div class="project-order">
-            <button>Заказать</button>
+            <button class='order-btn'>Заказать</button>
           </div>
         </div>
 
@@ -155,7 +158,7 @@
             <li><span class="bold">Этажность:</span>1 этаж</li>
           </div>
           <div class="project-order">
-            <button>Заказать</button>
+            <button class='order-btn'>Заказать</button>
           </div>
         </div>
 
@@ -172,7 +175,7 @@
             <li><span class="bold">Этажность:</span>1 этаж</li>
           </div>
           <div class="project-order">
-            <button>Заказать</button>
+            <button class='order-btn'>Заказать</button>
           </div>
         </div>
 
@@ -189,7 +192,7 @@
             <li><span class="bold">Этажность:</span>1 этаж</li>
           </div>
           <div class="project-order">
-            <button>Заказать</button>
+            <button class='order-btn'>Заказать</button>
           </div>
         </div>
 
@@ -206,7 +209,7 @@
             <li><span class="bold">Этажность:</span>1 этаж</li>
           </div>
           <div class="project-order">
-            <button>Заказать</button>
+            <button class='order-btn'>Заказать</button>
           </div>
         </div>
 
@@ -223,22 +226,24 @@
             <li><span class="bold">Этажность:</span>1 этаж</li>
           </div>
           <div class="project-order">
-            <button>Заказать</button>
+            <button class='order-btn'>Заказать</button>
           </div>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <section id="sectionGallery" class="gallery">
-      <h2 class="sectionTitle">Наши работы</h2>
-      <div class="images">
-        <img alt="" src="images/gallery/image1.jpg">
-        <img alt="" src="images/gallery/image2.jpg">
-        <img alt="" src="images/gallery/image3.jpg">
-      </div>
-    </section>
+  <section id="sectionGallery" class="gallery">
+    <h2 class="sectionTitle">Наши работы</h2>
+    <div class="images" data-width="100%">
+      <img alt="" src="images/gallery/image1.jpg">
+      <img alt="" src="images/gallery/image2.jpg">
+      <img alt="" src="images/gallery/image3.jpg">
+    </div>
+  </section>
 
-    <section id="sectionAbout" class="about">
+  <section id="sectionAbout" class="about">
+    <div class="container">
       <h2 class="sectionTitle">О Нас</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis maiores itaque, sit soluta distinctio porro fugiat facilis ullam delectus ipsam quis nisi, eos in ratione neque, inventore repudiandae eius pariatur quos recusandae molestiae
         nulla at incidunt! Laborum vitae voluptas sit fugiat eaque, porro aspernatur pariatur ratione distinctio culpa reprehenderit nam quae eligendi officia ipsam consequatur quasi corporis nihil quia sequi. Voluptas, numquam sunt odit cum. Qui
@@ -247,20 +252,14 @@
         autem sequi dolorem nemo id, a ipsam blanditiis! Excepturi incidunt optio maiores, sed est labore. Officia incidunt possimus pariatur ab aspernatur optio consectetur nemo voluptas omnis laborum iusto numquam facilis quos adipisci, ducimus
         repellat nostrum. Beatae maiores, esse nulla omnis, quos nobis harum nihil reiciendis placeat, quidem excepturi sit ea eligendi in distinctio eius iste cupiditate. Incidunt corporis numquam amet fugiat natus a id, dignissimos sed impedit
         consequatur. Exercitationem ut quidem soluta dolor.</p>
-    </section>
-
-    <div class="message">
-      <h2 class="sectionTitle">Напишите нам</h2>
-
-      <form action="mail.php" id="message" class="message-form">
-        <input type="text" name="" value="" placeholder="Ваше Имя">
-        <input type="text" name="" value="" placeholder="Ваш e-mail">
-        <textarea name="name" rows="8" cols="80" placeholder="Введите сообщение"></textarea>
-        <button type="button" name="button">Отправить</button>
-      </form>
     </div>
 
-    <section id="sectionContacts" class="contacts">
+  </section>
+
+
+
+  <section id="sectionContacts" class="contacts">
+    <div class="container">
       <h2 class="sectionTitle">Контакты</h2>
 
       <div class="contacts-wrapper">
@@ -288,20 +287,59 @@
           </div>
         </div>
 
-        <div class="map">
-          <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A6ac676f361eb22922cf415d3e39003d0b194b7f3536a1bf523e3811d4cbeecb6&amp;source=constructor" width="100%" height="240px" min-height="240px" frameborder="0"></iframe>
+        <div class="message">
+
+          <form action="mail.php" id="message" class="message-form">
+            <input type="text" name="" value="" placeholder="Ваше Имя">
+            <input type="text" name="" value="" placeholder="Ваш e-mail">
+            <textarea name="name" rows="8" cols="80" placeholder="Введите сообщение"></textarea>
+            <button type="button" name="button">Отправить</button>
+          </form>
         </div>
       </div>
+    </div>
 
-    </section>
+
+  </section>
 
 
 
   <!-- //*Footer* -->
   <footer>
-
+    <div class="map">
+      <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A6ac676f361eb22922cf415d3e39003d0b194b7f3536a1bf523e3811d4cbeecb6&amp;source=constructor" width="100%" height="450px" frameborder="0"></iframe>
+    </div>
   </footer>
   <!-- //*Footer*// -->
+
+  <div class="popUp hidden">
+    <div id="requestPopUp" class="requestPopUp">
+
+      <form id="callMe" class="requestForm">
+
+        <!-- Hidden Required Fields -->
+        <input type="hidden" name="admin_email" value="doma@zemdev.ru">
+        <input type="hidden" name="site" value="doma.zemdevelopment.ru">
+        <input type="hidden" name="form_subject" value="Сообщение с сайта doma.zemdevelopment.ru">
+        <!-- END Hidden Required Fields -->
+
+        <h2 class="requestForm__title">Оставить заявку</h2>
+
+        <label class="requestForm__label">Ваше имя*</label>
+        <input type="text" name="name" class="requestForm__input" required>
+
+        <label class="requestForm__label">Телефон*</label>
+        <input type="text" name="phone" class="requestForm__input" required>
+
+        <button type="submit" class="button">Оставить заявку</button>
+      </form>
+
+      <div class="popUp__close">
+        <i class="fas fa-times"></i>
+      </div>
+
+    </div>
+  </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js" integrity="sha512-HaoDYc3PGduguBWOSToNc0AWGHBi2Y432Ssp3wNIdlOzrunCtB2qq6FrhtPbo+PlbvRbyi86dr5VQx61eg/daQ==" crossorigin="anonymous"></script>
   <script src="./js/app.min.js"></script>
