--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <!-- Styles -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Play:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/reset.min.css">
   <link rel="stylesheet" href="./css/app.min.css">
 
@@ -123,7 +125,7 @@
     <h2>Прописываем в договоре конкретные <br>сроки и фиксированную стоимость. <br>Иначе выплатим Вам штраф!</h2>
   </section>
 
-  <section id="sectionProjects" class="block3">
+  <section id="sectionProjects" class="goods">
     <div class="container">
       <h2 class="sectionTitle">Проекты</h2>
       <div class="projects">
@@ -153,12 +155,12 @@
             <h3>Forenta</h3>
           </div>
           <div class="project-info">
-            <li><span class="bold">Внутренняя площадь:</span>75м2</li>
+            <!-- <li><span class="bold">Внутренняя площадь:</span>75м2</li>
             <li><span class="bold">Внешняя площадь:</span>75м<sup>2</sup></li>
-            <li><span class="bold">Этажность:</span>1 этаж</li>
+            <li><span class="bold">Этажность:</span>1 этаж</li> -->
           </div>
           <div class="project-order">
-            <button class='order-btn'>Заказать</button>
+            <!-- <button class='order-btn'>Заказать</button> -->
           </div>
         </div>
 
