--- a/app/index.html
+++ b/app/index.html
@@ -121,7 +121,7 @@
 
   </section>
 
-  <section class="block2">
+  <section class="announce">
     <h2>Прописываем в договоре конкретные <br>сроки и фиксированную стоимость. <br>Иначе выплатим Вам штраф!</h2>
   </section>
 
