--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+  <!-- OpenGraph -->
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="Solid Home">
+  <meta property="og:url" content="https://www.solid-home.ru">
+  <meta property="og:locale" content="ru">
+  <meta property="og:title" content="Solid Home">
+  <meta property="og:description" content="Строительство домов из газобетона в Санкт-Петербурге">
+  <meta property="og:image" content="./images/og.jpg">
+  <meta property="og:image:width" content="968">
+  <meta property="og:image:height" content="504">
+
+  <!-- Favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#603cba">
+  <meta name="theme-color" content="#ffffff">
+
   <!-- Styles -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Play:wght@700&display=swap" rel="stylesheet">
@@ -15,7 +35,7 @@
   <link rel="stylesheet" href="./css/app.min.css">
 
   <!-- Title -->
-  <title>Document</title>
+  <title>Solid Home</title>
 
 </head>
 
@@ -89,9 +109,11 @@
   <div class="container profession-container">
     <div class="profession-text">
       <h3 class="">Строительство домов из газобетона в Санкт-Петербурге</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est neque facilis, odit minima aperiam voluptatibus nisi necessitatibus, dolore placeat fugiat dolorem explicabo quam sapiente qui. Laborum culpa quibusdam nemo sapiente, eum,
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est neque facilis, odit minima aperiam voluptatibus nisi necessitatibus, dolore placeat fugiat dolorem explicabo quam sapiente qui. Laborum culpa quibusdam nemo sapiente, eum,
         eligendi nam dolores debitis totam. Numquam repellat, iure, sapiente, impedit odit culpa, atque deserunt vitae porro recusandae esse reiciendis reprehenderit aperiam neque ullam qui corporis eius perferendis unde sunt tempore laudantium
-        quibusdam quia! Facilis doloribus magnam ex quos recusandae, quis inventore!</p>
+        quibusdam quia! Facilis doloribus magnam ex quos recusandae, quis inventore!
+      </p>
         <!-- <p>Проектируем дома от 200р за м2 + подробная <span class="gold">смета</span> на строительство дома <span class="gold">в подарок</span>.</p> -->
       </div>
       <div class="advantage">
