--- a/app/index.html
+++ b/app/index.html
@@ -60,7 +60,7 @@
         </div>
 
         <div class="contact-links">
-          <a href="tel:+79112879018" id="callToMe" class="phonenumber">+7-911-287-90-18</a>
+          <a href="tel:+79112879018" class="phonenumber callToMe">+7-911-287-90-18</a>
           <a href="tel:+79112879018"  class="phonelink"><i class="fas fa-phone"></i></a>
           <a href="https://wa.me/88121234567" class="whatsapp"><i class="fab fa-whatsapp"></i></a>
           <a href="mailto:test@test.ru" class="whatsapp"><i class="fas fa-envelope"></i></a>
@@ -108,91 +108,70 @@
 <section class="profession">
   <div class="container profession-container">
     <div class="profession-text">
-      <h3 class="">Строительство домов из газобетона в Санкт-Петербурге</h3>
+      <h3 class="">«Мой дом – моя крепость» - для нас это не просто фигура речи, это наша основа!</h3>
+      <h3 class=""></h3>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est neque facilis, odit minima aperiam voluptatibus nisi necessitatibus, dolore placeat fugiat dolorem explicabo quam sapiente qui. Laborum culpa quibusdam nemo sapiente, eum,
-        eligendi nam dolores debitis totam. Numquam repellat, iure, sapiente, impedit odit culpa, atque deserunt vitae porro recusandae esse reiciendis reprehenderit aperiam neque ullam qui corporis eius perferendis unde sunt tempore laudantium
-        quibusdam quia! Facilis doloribus magnam ex quos recusandae, quis inventore!
+        Долговечность конструкций – до 200 лет!
+        Газобетонный блок – разновидность ячеистого бетона, который получил популярность благодаря
+        пористой структуре, наделяющей изделия особыми качествами:
+        высокая экологичность материала и пожароустойчивость;
+        низкий коэффициент теплопроводности при условии сохранения высоких показателей прочности;
+        низкий вес способен снизить нагрузку на фундамент строения;
+        долговечность и высокие эксплуатационные характеристики;
+        большой выбор вариантов отделки фасада и внутренней части здания;
+        простая технология укладки блока;
+        цена/качество.
+        <br>
+        <br>
+        Говоря о стоимости дома, не стоит забывать и о его ликвидности на вторичном рынке.
+        Спустя годы продать «каркаскник», да ещё и на винтовых сваях, будет на порядок сложнее, чем каменный газобетонный дом.
+
       </p>
-        <!-- <p>Проектируем дома от 200р за м2 + подробная <span class="gold">смета</span> на строительство дома <span class="gold">в подарок</span>.</p> -->
+    </div>
+
+    <div class="advantage">
+      <div class="advantage-item">
+        <i class="fas fa-home"></i>
+        <p>Более 17 лет опыта в сфере строительства и монолитных работ</p>
       </div>
-      <div class="advantage">
-        <div class="advantage-item">
-          <i class="fas fa-home"></i>
-          <p>Более 13 лет опыта<br> работы в сфере<br> строительства и ремонтов</p>
-        </div>
 
-        <div class="advantage-item">
-          <i class="fas fa-tools"></i>
-          <p>Профессиональное<br> оборудование <br>и инструмент</p>
-        </div>
+      <div class="advantage-item">
+        <i class="fas fa-tools"></i>
+        <p>Квалифицированные кадры и профессиональное оборудование</p>
+      </div>
 
-        <div class="advantage-item">
-          <i class="fas fa-shield-alt"></i>
-          <p>Гарантия 2 года<br> на все<br> производимые работы</p>
-        </div>
+      <div class="advantage-item">
+        <i class="fas fa-shield-alt"></i>
+        <p>Гарантийные обязательства на все виды работ</p>
+      </div>
 
-        <div class="advantage-item">
-          <i class="fas fa-ruble-sign"></i>
-          <p>Фиксированная<br> стоимость<br> работ</p>
-        </div>
+      <div class="advantage-item">
+        <i class="fas fa-ruble-sign"></i>
+        <p>Фиксированная<br> стоимость<br> работ</p>
       </div>
     </div>
-    <!-- <p>Проектируем дома от 200р/м2 + подробная смета на строительство дома в подарок.</p> -->
+  </div>
+  <!-- <p>Проектируем дома от 200р/м2 + подробная смета на строительство дома в подарок.</p> -->
 
-  </section>
+</section>
 
-  <section class="announce">
-    <h2>Прописываем в договоре конкретные <br>сроки и фиксированную стоимость. <br>Иначе выплатим Вам штраф!</h2>
-  </section>
+<section class="announce">
+  <h2>Прописываем в договоре конкретные <br>сроки и фиксированную стоимость. <br>Иначе выплатим Вам штраф!</h2>
+</section>
 
-  <section id="sectionProjects" class="goods">
-    <div class="container">
-      <h2 class="sectionTitle">Проекты</h2>
-      <div class="projects">
+<section id="sectionProjects" class="goods">
+  <div class="container">
+    <h2 class="sectionTitle">Проекты</h2>
+    <div class="projects">
 
-        <div class="project" data-name="forenta">
-          <div class="project-image">
-            <img src="./images/dom.jpg" alt="">
-          </div>
-          <div class="project-title">
-            <h3>Forenta</h3>
-          </div>
-          <span class="project-price hidden">5 000 000</span>
-          <div class="project-info hidden">
-            <p><span class="bold">Внутренняя площадь:</span>75м2</p>
-            <p><span class="bold">Внешняя площадь:</span>75м<sup>2</sup></p>
-            <p><span class="bold">Этажность:</span>1 этаж</p>
-          </div>
-          <!-- <div class="project-order">
-          <button class='order-btn'>Заказать</button>
-        </div> -->
-      </div>
-
-      <div class="project">
+      <div class="project" data-name="forenta">
         <div class="project-image">
           <img src="./images/dom.jpg" alt="">
         </div>
         <div class="project-title">
           <h3>Forenta</h3>
         </div>
-        <div class="project-info hidden">
-          <!-- <li><span class="bold">Внутренняя площадь:</span>75м2</li>
-          <li><span class="bold">Внешняя площадь:</span>75м<sup>2</sup></li>
-          <li><span class="bold">Этажность:</span>1 этаж</li> -->
-        </div>
-        <div class="project-order">
-          <!-- <button class='order-btn'>Заказать</button> -->
-        </div>
-      </div>
-
-      <div class="project">
-        <div class="project-image">
-          <img src="./images/dom.jpg" alt="">
-        </div>
-        <div class="project-title">
-          <h3>Forenta</h3>
-        </div>
+        <span class="project-price hidden">5 000 000</span>
         <div class="project-info hidden">
           <p><span class="bold">Внутренняя площадь:</span>75м2</p>
           <p><span class="bold">Внешняя площадь:</span>75м<sup>2</sup></p>
@@ -211,9 +190,26 @@
         <h3>Forenta</h3>
       </div>
       <div class="project-info hidden">
-        <li><span class="bold">Внутренняя площадь:</span>75м2</li>
+        <!-- <li><span class="bold">Внутренняя площадь:</span>75м2</li>
         <li><span class="bold">Внешняя площадь:</span>75м<sup>2</sup></li>
-        <li><span class="bold">Этажность:</span>1 этаж</li>
+        <li><span class="bold">Этажность:</span>1 этаж</li> -->
+      </div>
+      <div class="project-order">
+        <!-- <button class='order-btn'>Заказать</button> -->
+      </div>
+    </div>
+
+    <div class="project">
+      <div class="project-image">
+        <img src="./images/dom.jpg" alt="">
+      </div>
+      <div class="project-title">
+        <h3>Forenta</h3>
+      </div>
+      <div class="project-info hidden">
+        <p><span class="bold">Внутренняя площадь:</span>75м2</p>
+        <p><span class="bold">Внешняя площадь:</span>75м<sup>2</sup></p>
+        <p><span class="bold">Этажность:</span>1 этаж</p>
       </div>
       <!-- <div class="project-order">
       <button class='order-btn'>Заказать</button>
@@ -253,6 +249,23 @@
   <button class='order-btn'>Заказать</button>
 </div> -->
 </div>
+
+<div class="project">
+  <div class="project-image">
+    <img src="./images/dom.jpg" alt="">
+  </div>
+  <div class="project-title">
+    <h3>Forenta</h3>
+  </div>
+  <div class="project-info hidden">
+    <li><span class="bold">Внутренняя площадь:</span>75м2</li>
+    <li><span class="bold">Внешняя площадь:</span>75м<sup>2</sup></li>
+    <li><span class="bold">Этажность:</span>1 этаж</li>
+  </div>
+  <!-- <div class="project-order">
+  <button class='order-btn'>Заказать</button>
+</div> -->
+</div>
 </div>
 </div>
 </section>
@@ -269,19 +282,36 @@
 <section id="sectionAbout" class="about">
   <div class="container">
     <h2 class="sectionTitle">О Нас</h2>
-    <p>Наша компания успешно работает с 1998-го года.
-      В штате имеется 3 бригады по СПб и ЛО, которые знают своё дело и все современные технологии возведения домов!
-      Основная деятельность нашей компании - малоэтажное строительство домов и их отделка. Строительство домов под ключ осуществляется в кратчайшие сроки. Наши мастера сделают все возможное, чтобы вы как можно скорее стали обладателем вашего так давно желанного дома. Вам не придется о чем-либо беспокоиться: разработку проекта, возведение дома и его отделку мы возьмем на себя.
-      Вам достаточно оставить заявку на строительство загородного дома, после чего наши мастера приступят к работе.
-    </p>
-    <p class="scheme">Схема работы очень проста:</p>
     <p>
-      <li>Вы приезжаете к нам в офис или отправляете заявку на строительство дома в СПб или ЛО на нашу электронную почту;</li>
-      <li>Вы выбираете готовый проект будущего дома или бани на нашем сайте. Также вы можете разработать свой собственный проект вместе с нашими архитекторами;</li>
-      <li>Наши специалисты отправляются к вам на участок, чтобы оценить качество грунта, а также определить точное расположение будущего дома;</li>
-      <li>После этого вам остается только подписать договор. Наши менеджеры к этому времени уже подготовят всю необходимую проектную документацию;</li>
-      <li>Ход работы постоянно контролируется со стороны бригадиров, а так же, есть услуга авторского надзора со стороны архитектора, разработавшего ваш проект;</li>
+      С момента основания в 2004 году и до настоящего времени компания «Solid Home» прошла путь от
+      небольшой подрядной организации до крупного многопрофильного предприятия, предоставляющего
+      широкий спектр услуг в сфере загородного малоэтажного строительства. За прошедшие 17 лет значительно расширились направления деятельности компании, сформировался коллектив квалифицированных инженеров, мастеров и менеджеров, которые хорошо знают особенности современных строительных технологий и материалов.
+      Мы занимаемся всеми видами работ по строительству домов, как комплексно, так и отдельно:
+      <br>
+      <br>
+      <span class="bold">
+        заливка фундамента;
+        возведение стен и перегородок;
+        кровля;
+        электрика;
+        внутренние и внешние коммуникации;
+        отделочные работы.
+      </span>
+      <br>
+      <br>
+      Высокий уровень профессионализма каждого специалиста, максимальная ответственность при выполнении
+      любых задач, неизменное соблюдение утвержденных стандартов и достигнутых договоренностей – основные
+      принципы, которыми руководствуются все сотрудники предприятия.
+      <br>
+      <br>
+      Мы объединили в себе все качества, которыми должна обладать строительная компания:
+      <span class="bold">
+        мастерское выполнение работ;
+        разумные цены;
+        предельная внимательность к клиенту.
+      </span>
     </p>
+
   </div>
 
 </section>
@@ -298,12 +328,12 @@
 
         <div class="contacts-item contacts-phone">
           <i class="fas fa-phone"></i>
-          <a href="tel:+88121234567" class="contacts-link">8 (812) 123-4567</a>
+          <a href="tel:+79112879018" class="contacts-link callToMe">+7-911-287-90-18</a>
         </div>
 
         <div class="contacts-item contacts-email">
           <i class="fas fa-envelope"></i>
-          <a href="mailto:test@test.ru" class="contacts-link">test@test.ru</a>
+          <a href="mailto:sales@solid-home.ru" class="contacts-link">sales@solid-home.ru</a>
         </div>
 
         <div class="contacts-item contacts-messenger">
@@ -311,23 +341,23 @@
           <a href="https://wa.me/88121234567" class="contacts-link">Whatsapp</a>
         </div>
 
-        <div class="contacts-item contacts-adress">
-          <i class="fas fa-map-marker-alt"></i>
-          <span class="contacts-link">СПб, Тестовая улица, дом 64, кор. 1</span>
-        </div>
-      </div>
+        <!-- <div class="contacts-item contacts-adress">
+        <i class="fas fa-map-marker-alt"></i>
+        <span class="contacts-link">СПб, Тестовая улица, дом 64, кор. 1</span>
+      </div> -->
+    </div>
 
-      <div class="message">
+    <div class="message">
 
-        <form action="mail.php" id="message" class="message-form">
-          <input type="text" name="" value="" placeholder="Ваше Имя">
-          <input type="text" name="" value="" placeholder="Ваш e-mail">
-          <textarea name="name" rows="8" cols="80" placeholder="Введите сообщение"></textarea>
-          <button type="button" name="button">Отправить</button>
-        </form>
-      </div>
+      <form action="mail.php" id="message" class="message-form">
+        <input type="text" name="" value="" placeholder="Ваше Имя">
+        <input type="text" name="" value="" placeholder="Ваш e-mail">
+        <textarea name="name" rows="8" cols="80" placeholder="Введите сообщение"></textarea>
+        <button type="button" name="button">Отправить</button>
+      </form>
     </div>
   </div>
+</div>
 
 
 </section>
@@ -335,20 +365,22 @@
 <!-- //*Footer* -->
 <footer>
   <div class="map">
-    <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A6ac676f361eb22922cf415d3e39003d0b194b7f3536a1bf523e3811d4cbeecb6&amp;source=constructor" width="100%" height="485px" frameborder="0"></iframe>
+    <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A6ac676f361eb22922cf415d3e39003d0b194b7f3536a1bf523e3811d4cbeecb6&amp;source=constructor" width="100%" height="481px" frameborder="0"></iframe>
   </div>
 </footer>
-<!-- //*Footer*// -->
+<!-- //*Footer-END*// -->
 
+
+<!-- //*PopUp* -->
 <div class="popUp hidden">
   <div id="callMePopUp" class="callMePopUp">
 
     <form id="callMe" class="callMeForm">
 
       <!-- Hidden Required Fields -->
-      <input type="hidden" name="admin_email" value="doma@zemdev.ru">
-      <input type="hidden" name="site" value="doma.zemdevelopment.ru">
-      <input type="hidden" name="form_subject" value="Сообщение с сайта doma.zemdevelopment.ru">
+      <input type="hidden" name="admin_email" value="sales@solid-home.ru">
+      <input type="hidden" name="site" value="solid-home.ru">
+      <input type="hidden" name="form_subject" value="Запрос звонка с сайта solid-home.ru">
       <!-- END Hidden Required Fields -->
 
       <h2 class="callMeForm__title">Обратный звонок</h2>
@@ -383,10 +415,10 @@
         <form id="callMeFromGoods" class="requestForm">
 
           <!-- Hidden Required Fields -->
-          <input type="hidden" name="admin_email" value="doma@zemdev.ru">
-          <input type="hidden" name="site" value="doma.zemdevelopment.ru">
+          <input type="hidden" name="admin_email" value="sales@solid-home.ru">
+          <input type="hidden" name="site" value="solid-home.ru">
           <input type="hidden" name="project_name" value="">
-          <input type="hidden" name="form_subject" value="Сообщение с сайта doma.zemdevelopment.ru">
+          <input type="hidden" name="form_subject" value="Заявка с сайта solid-home.ru">
           <!-- END Hidden Required Fields -->
 
           <h2 class="requestForm__title">Оставить заявку</h2>
@@ -407,15 +439,15 @@
     </div>
   </div>
 
-  <!-- <div id="thankyouPopUp" class="thankyouPopUp">
+  <div id="thankyouPopUp" class="thankyouPopUp">
+    <img src="./src/images/operator.jpg" alt="operator" class="thankyouPopUp__img">
+    <h2 class="thankyouPopUp__thanks">Спасибо за заявку!</h2>
+    <p class="thankyouPopUp__manager">Менеджер свяжется с Вами в ближайшее время</p>
+    <hr>
 
-  <img src="./src/images/operator.jpg" alt="operator" class="thankyouPopUp__img">
-  <h2 class="thankyouPopUp__thanks">Спасибо за заявку!</h2>
-  <p class="thankyouPopUp__manager">Менеджер свяжется с Вами в ближайшее время</p>
-  <hr>
-
-</div> -->
+  </div>
 </div>
+<!-- //*PopUp-END* -->
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js" integrity="sha512-HaoDYc3PGduguBWOSToNc0AWGHBi2Y432Ssp3wNIdlOzrunCtB2qq6FrhtPbo+PlbvRbyi86dr5VQx61eg/daQ==" crossorigin="anonymous"></script>
 <script src="./js/app.min.js"></script>
